(add new changes on top of this file)

Änderungen
----------

v0.10.1 (??.06.2011) (not released)
 * Internal Changes in SearchBase and new hook in MediaMarker
 * Full Workspace-Support added! Automatic version overlay for database queries!
 * SearchBase: new hook searchbase_handleTableMapping
 * tx_rnbase::load(): Make TYPO3_CONF_VARS visible for loaded classes. Used for XClass-handling.

v0.9.15 (30.05.2011) (not released)
 * Workspace-Support: util_DB builds correct SQL-queries for preview mode
 * util_Misc: new method sendErrorMail()
 * External DB integration started
 * PageBrowser: Offset will be never lower than 0

v0.9.14 (26.05.2011) (not released)
 * tx_rnbase_configurations::get(): option $deep fixed to keep former behavier.

v0.9.13 (21.05.2011)
 * tx_rnbase: Class loader supports extbase classes.
 * New DB operator constants OP_NOTIN and OP_NOTIN_SQL
 * New base class for services tx_rnbase_sv1_Base
 * New view class for list views: tx_rnbase_views_List
 * util_SearchBase: method getWrapperClass is now public
 * tx_rnbase_util_DB::getRecord() checks for TCA configuration of table
 * tx_rnbase_configurations::get(): option $deep reimplemented. Should work now.
 * SimpleMarker can render simple links configured by Typoscript

v0.9.12 (02.05.2011) (not released)
 * model_base: Magic method __call implemented to support FLUID. Thanks to Stephan Reuther!
 * action_BaseIOC: It is possible to set view class by Typoscript. Thanks to Stephan Reuther!

v0.9.11 (01.04.2011) (not released)
 * PageBrowser: Handle pointers out of listsize
 * BaseView: Render PLUGIN_ before CallModules
 * tx_rnbase_util_Files: new method makeZipFile

v0.9.9 (17.03.2011) (not released)
 * FormTool: Some new Buttons. Thanks to Michael Wagner
 * StartValue for totalline-Marker is configureable


v0.9.8 (24.02.2011)
 * tx_rnbase_util_TYPO3: new check methods for TYPO3 versions 4.4 and 4.5