@@ -8,6 +8,7 @@ v0.10.1 (??.06.2011) (not released)
  * Full Workspace-Support added! Automatic version overlay for database queries!
  * SearchBase: new hook searchbase_handleTableMapping
  * tx_rnbase::load(): Make TYPO3_CONF_VARS visible for loaded classes. Used for XClass-handling.
+ * util_Link: it is possible to configure fixed server schema with absurl
 
 v0.9.15 (30.05.2011) (not released)
  * Workspace-Support: util_DB builds correct SQL-queries for preview mode
